--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "react-homework-template",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "name": "goit-react-hw-04-image-finder",
+  "version": "1.0.0",
+  "homepage": "https://lllastun.github.io/goit-react-hw-04-image-finder/",
   "dependencies": {
+    "@react-md/icon": "^5.1.3",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "babel-loader": "8.0.5",
+    "clsx": "^1.2.1",
+    "formik": "^2.2.9",
+    "modern-normalize": "^1.1.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^5.3.10",
+    "styled-jsx": "^5.1.2",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
